# ai-jail

./: .ai-jail  .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: sandbox-alternatives.md
docs/superpowers/plans/: 2026-04-21-claude-dir-flag.md
docs/superpowers/specs/: 2026-04-21-claude-dir-flag-design.md
releases/: v0.10.0.md  v0.4.3.md  v0.6.0.md
src/: bootstrap.rs  cli.rs  config.rs  main.rs  output.rs  pty.rs  signals.rs  statusbar.rs
src/sandbox/: bwrap.rs  landlock.rs  mod.rs  rlimits.rs  seatbelt.rs  seccomp.rs
tests/: resize_integration.rs  sandbox_escape.rs
tests/helpers/: escape_helper.c
