[package]
name = "ai-jail"
version = "0.1.0"
edition = "2021"
description = "Sandbox for AI coding agents (bubblewrap on Linux, sandbox-exec on macOS)"
license = "GPL-3.0-only"

[dependencies]
lexopt = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
strip = true
lto = true
