[package]
name = "ai-jail"
version = "0.8.1"
edition = "2024"
description = "Sandbox for AI coding agents (bubblewrap on Linux, sandbox-exec on macOS)"
license = "GPL-3.0-only"
repository = "https://github.com/akitaonrails/ai-jail"
readme = "README.md"
keywords = ["sandbox", "ai", "security", "bubblewrap"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "docs/", "dist/", ".claude/", ".ai-jail"]

[dependencies]
lexopt = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
vt100 = "0.16"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "poll", "term", "resource"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"

[profile.release]
strip = true
lto = true
